--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0'
 //    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.android.support:support-v4:29.+'
     testImplementation 'junit:junit:4.12'
     //Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0'
