--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,14 +36,14 @@ dependencies {
 //    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "com.yuyakaido.android:card-stack-view:2.3.4"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.android.support:support-v4:29.+'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'com.android.support:support-v4:29.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     testImplementation 'junit:junit:4.12'
     //Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0'
     implementation "androidx.navigation:navigation-ui-ktx:2.1.0"
 
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
