--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,11 @@ apply plugin: "kotlin-kapt"
 
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
+    compileSdkVersion 30
     defaultConfig {
         applicationId "com.piotrprus.motionlayoutplayground"
         minSdkVersion 22
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -26,6 +25,13 @@ android {
     dataBinding {
         enabled true
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
 }
 
 dependencies {
@@ -36,14 +42,15 @@ dependencies {
 //    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "com.yuyakaido.android:card-stack-view:2.3.4"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.android.support:support-v4:29.0'
+    implementation 'com.android.support:support-v4:30.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    testImplementation 'junit:junit:4.12'
     //Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0'
     implementation "androidx.navigation:navigation-ui-ktx:2.1.0"
 
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
+
+    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
