--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.core:core-ktx:1.5.0-alpha03'
 //    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "com.yuyakaido.android:card-stack-view:2.3.4"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
