--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,18 +37,19 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.5.0-alpha03'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.5.0-alpha04'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0'
 //    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation "com.yuyakaido.android:card-stack-view:2.3.4"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.android.support:support-v4:30.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha06'
     //Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.1.0'
     implementation "androidx.navigation:navigation-ui-ktx:2.1.0"
 
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta7'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
